small fixes: increased z-index on contacts container, moved task-overlay-panel  overflow:auto to media query

--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -199,7 +199,7 @@ textarea::placeholder {
   box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
   max-height: 240px;
   overflow-y: auto;
-  z-index: 1;
+  z-index: 3;
 }
 
 .addTaskContactsList::-webkit-scrollbar {
