--- a/styles/boardMedia.css
+++ b/styles/boardMedia.css
@@ -76,6 +76,7 @@
 @media (max-width: 1210px) {
   #taskOverlay .task-overlay-panel {
     width: 750px;
+    overflow: auto;
   }
 }
 
@@ -92,7 +93,7 @@
     }
 
     .btn {
-      width: 148px
+      width: 148px;
     }
 
     h1 {
@@ -104,7 +105,6 @@
       margin-left: 10px;
     }
   }
-
 }
 
 @media (max-width: 850px) {
@@ -120,7 +120,7 @@
   }
 
   #taskOverlay.edit-mode .addOrClear {
-    padding-right: 0px
+    padding-right: 0px;
   }
 
   #taskOverlay.edit-mode .addTaskOverlayFooter {
@@ -147,7 +147,6 @@
 
   #taskOverlay.edit-mode .overlay-panel {
     width: 390px;
-
   }
 
   .dropzone .empty {
