--- a/styles/boardOverlay.css
+++ b/styles/boardOverlay.css
@@ -43,7 +43,6 @@ body.modal-open {
   width: 1116px;
   background: #fff;
   border-radius: 24px;
-  overflow: auto;
   box-shadow: 0 20px 60px rgba(0, 0, 0, 0.25);
   position: relative;
   padding: 20px 10px 0px;
